// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-chip default 1`] = `
<button
  class="m-chip-add m--is-large"
  type="button"
>
  <div
    class="m-chip-add__body"
  >
    <span
      class="m-chip-add__hidden-text"
    >
      Ajouter : 
    </span>
     Default chip 
    <svg
      aria-hidden="true"
      class="m-svg m-chip-add__icon"
      height="20px"
      width="20px"
    />
  </div>
</button>
`;

exports[`Storyshots modul-components|m-chip disabled 1`] = `
<button
  class="m-chip-add m--is-large m--is-disabled"
  disabled="disabled"
  type="button"
>
  <div
    class="m-chip-add__body"
  >
    <span
      class="m-chip-add__hidden-text"
    >
      Ajouter : 
    </span>
     Disabled 
    <svg
      aria-hidden="true"
      class="m-svg m-chip-add__icon"
      height="20px"
      width="20px"
    />
  </div>
</button>
`;

exports[`Storyshots modul-components|m-chip mode="add" 1`] = `
<button
  class="m-chip-add m--is-large"
  type="button"
>
  <div
    class="m-chip-add__body"
  >
    <span
      class="m-chip-add__hidden-text"
    >
      Ajouter : 
    </span>
     Add mode 
    <svg
      aria-hidden="true"
      class="m-svg m-chip-add__icon"
      height="20px"
      width="20px"
    />
  </div>
</button>
`;

exports[`Storyshots modul-components|m-chip mode="delete" 1`] = `
<div
  class="m-chip-delete m--is-large"
>
  <div
    class="m-chip-delete__body"
  >
    <span
      class="m-chip-delete__text"
      id="mChipDeleteText-fakeId"
    >
      <span
        class="m-chip-delete__hidden-text"
      >
        Supprimer : 
      </span>
       Delete mode
    </span>
     
    <button
      aria-labelledby="mChipDeleteText-fakeId"
      class="m-chip-delete__button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-chip-delete__icon"
        height="14px"
        width="14px"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-chip size="medium" - add 1`] = `
<button
  class="m-chip-add m--is-medium"
  type="button"
>
  <div
    class="m-chip-add__body"
  >
    <span
      class="m-chip-add__hidden-text"
    >
      Ajouter : 
    </span>
     Add mode 
    <svg
      aria-hidden="true"
      class="m-svg m-chip-add__icon"
      height="20px"
      width="20px"
    />
  </div>
</button>
`;

exports[`Storyshots modul-components|m-chip size="medium" - delete 1`] = `
<div
  class="m-chip-delete m--is-medium"
>
  <div
    class="m-chip-delete__body"
  >
    <span
      class="m-chip-delete__text"
      id="mChipDeleteText-fakeId"
    >
      <span
        class="m-chip-delete__hidden-text"
      >
        Supprimer : 
      </span>
       Delete mode
    </span>
     
    <button
      aria-labelledby="mChipDeleteText-fakeId"
      class="m-chip-delete__button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-chip-delete__icon"
        height="14px"
        width="14px"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-chip size="small" - add 1`] = `
<button
  class="m-chip-add m--is-small"
  type="button"
>
  <div
    class="m-chip-add__body"
  >
    <span
      class="m-chip-add__hidden-text"
    >
      Ajouter : 
    </span>
     Add mode 
    <svg
      aria-hidden="true"
      class="m-svg m-chip-add__icon"
      height="13px"
      width="13px"
    />
  </div>
</button>
`;

exports[`Storyshots modul-components|m-chip size="small" - delete 1`] = `
<div
  class="m-chip-delete m--is-small"
>
  <div
    class="m-chip-delete__body"
  >
    <span
      class="m-chip-delete__text"
      id="mChipDeleteText-fakeId"
    >
      <span
        class="m-chip-delete__hidden-text"
      >
        Supprimer : 
      </span>
       Delete mode
    </span>
     
    <button
      aria-labelledby="mChipDeleteText-fakeId"
      class="m-chip-delete__button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-chip-delete__icon"
        height="8px"
        width="8px"
      />
    </button>
  </div>
</div>
`;
